--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
       rel="stylesheet"
     />
 
-    <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
+    <link rel="icon" type="image/png" href='assets/icons/favicon.png' />
 
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
